dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/tos.c)

dnl For automake
PACKAGE=otosis
VERSION=0.30

dnl Initialize automake macros
AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)

dnl Make a header with the things we find.
AM_CONFIG_HEADER(config.h)

dnl Set CFLAGS
CFLAGS="$CFLAGS -Wall -Wstrict-prototypes -O2 -fomit-frame-pointer"

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_AWK
AC_PROG_RANLIB

dnl Checks for libraries.
AC_CHECK_LIB(ncurses,main)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_STRUCT_ST_BLKSIZE
AC_STRUCT_ST_BLOCKS
AC_DECL_SYS_SIGLIST
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_FNMATCH
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_FUNC_MMAP
AC_FUNC_SETVBUF_REVERSED
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(getcwd mkdir rmdir select strerror strspn strtol)

dnl Specify which variables that should be exchanged
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

AC_OUTPUT(Makefile \
	tools/Makefile \
	include/Makefile \
	src/Makefile src/lib/Makefile \
	src/lib/bios/Makefile src/lib/gemdos/Makefile \
	src/lib/hwreg/Makefile src/lib/mint/Makefile \
	src/lib/xbios/Makefile src/lib/xgemdos/Makefile \
	doc/Makefile
)
